Update and rename sync-Alpha.yml to sync-main.yml

--- a/.github/workflows/sync-main.yml
+++ b/.github/workflows/sync-main.yml
@@ -1,4 +1,4 @@
-name: Upstream Sync branch-Alpha
+name: Upstream Sync Branch main
 
 permissions:
   contents: write
@@ -25,8 +25,8 @@ jobs:
         uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
         with:
           upstream_sync_repo: MetaCubeX/mihomo
-          upstream_sync_branch: Alpha
-          target_sync_branch: Alpha
+          upstream_sync_branch: main
+          target_sync_branch: main
           target_repo_token: ${{ secrets.GITHUB_TOKEN }} # automatically generated, no need to set
 
           # Set test_mode true to run tests instead of the true action!!
